# pegasus

./: .gitignore  LICENSE  NOTICE.md  PROJECT.md  README.md  pyproject.toml  workers.json
agents/project-agents/: README.md  builder.md  deep-digger.md  risk-reviewer.md  verifier.md
agents/runner/: pegasus-runner.md
claude/: PRINCIPLES.md  coordinator.md
claude/bus/: SCHEMA.md
claude/project-workers/: README.md  builder.md  risk-reviewer.md  verifier.md
claude/reflectors/: friction-rules.md  violation-rules.md
claude/routines/: leader-driver.md  pegasus-driver.md
claude/sops/: parallel-subagents.md  spec-seed.md  worktree-parallel.md
docs/: architecture.md
examples/project/spec/: addenda.md  current.md  updates.md
examples/project/spec/tasks/: example.md
examples/project/workflow/: claude-routine.md  events.ndjson  questions.md  state.json  status.md
examples/project/workflow/agent-requests/: example.md
integrations/claude-code/: pegasus.md
pegasus/: __init__.py  cli.py
schemas/: project-event.schema.json
scripts/: install.sh
skills/pegasus/: SKILL.md
skills/pegasus-init/: SKILL.md
tests/: test_cli.py
workers/: README.md  ceo.md  cfo.md  cmo.md  coo.md  cto.md  general-counsel.md
