[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pegasus"
version = "0.1.0"
description = "Spec-driven project leader for cloud agent work"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

[project.scripts]
pegasus = "pegasus.cli:main"
